--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "PWA Sample",
-  "short_name": "PWA Sample DAYO",
+  "short_name": "testtest",
   "background_color": "#fc980c",
   "icons": [{
       "src": "./images/icon-256.png",
